# script-runner

./: .gitignore  LICENSE  README.md  player-guide.md  pyproject.toml  requirements.txt  scriptrunner.db  starter.py
.github/workflows/: ci.yml
agents/: CLAUDE.md
player/: player-guide.md  starter.py
scriptrunner/: cli.py
scriptrunner/server/: db.py  main.py  mission_engine.py  models.py  state.py
scriptrunner/server/routes/: automate.py  compress.py  core.py  dark_ops.py  history.py  missions.py  pipeline.py  prestige.py  ws.py
scriptrunner/tui/: app.py
scriptrunner/tui/widgets/: automations_panel.py  blob_panel.py  core_panel.py  entropy_gauge.py  log_panel.py  missions_panel.py
tests/: conftest.py  test_compress.py  test_history.py  test_mine.py  test_mission_engine.py  test_missions_route.py  test_status.py
