[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scriptrunner"
version = "0.1.0"
description = "A terminal-native idle game where your scripts are the controller."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.19",
    "textual>=0.63.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "websockets>=12.0",
]

[project.scripts]
scriptrunner = "scriptrunner.cli:app"

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
